--- a/チーム開発.md
+++ b/チーム開発.md
@@ -3,17 +3,26 @@
 ## 一人での開発の場合
 ### メリット
 *コミュニケーションコストがかからない*   
-* 趣味でのアプリ開発や、自己学習など、極小規模のソフトウェア開発を個人でで行っている為、基本的にコミュニケーションを必要としない。
+* 趣味でのアプリ開発や、自己学習など、極小規模のソフトウェア開発を個人で行っている場合には、基本的にコミュニケーションを必要としない。
 
-*スピーディーな開発・リリースが可能。*
-* 対人間のやり取りがない分、判断を自己で完結することができ、スピーディな開発、りりースができる。
+*スピーディーな開発・リリースが可能*
+* 対人間のコミュニケーションがない為、判断や調整を自己で完結することができ、スピーディな開発、リリースができる。
 
 ### デメリット
-*一定規模の開発しかできない。*  
-* フリーウェアや趣味のプログラミングでは問題ないが、有料のシェアウェアやそれ以上の水準のソフトウェアの開発を望む場合、ひとりではどうしても製品すべての管理がすることが難しくなる。
-* 物理的な作業量やスキルが限定されるので、更新が滞ったり、バグ対応に時間がかったりする問題が発生する。
+*一定規模の開発までしかできない*  
+* フリーウェアや趣味のプログラミングでは問題ないが、有料のシェアウェアやそれ以上の水準のソフトウェアの開発を望んだ場合、ひとりではどうしても製品すべての管理をすることが難しくなり、品質を維持することができなくなる。
+* スキルや物理的に可能な作業量が限定されるので、バグ対応に時間がかったり、ソフトウェア更新が滞ったりといったスケジュール上の問題が次第に発生してくる。
+
+規模の大きな開発を考えた場合、複数の人による、チーム開発を検討することが必然となる。
+
 
 ## チーム開発の利点
+* メンバーを適切に配することで、製品の管理を適切に行い、規模が大きくなっても品質を維持することができる。
+* メンバーを増員することで、物理的にはどの様な規模の開発業務であってもスケジュールの遅れなく対応することが可能になる。
+* 様々なスキルのメンバーが集うことで、意見を集約し、新しい技術の導入することも期待できる。
 
-
-## チーム開発の問題点
+## チーム開発の課題
+チーム内のメンバーが増えれば増えるほど、可能なことが増える反面コミュニケーションが相対的に難しくなっていく。課題の共有、進捗、スケジュールの管理など、コミュニケーションを円滑にかつ、いかにコストをかけず進めるかがまず大きな課題である。  
+また、複数人で作業をする様になったことで、ソースコード、ドキュメントの競合が発生する様になる。場合によっては、大きな手戻りや、バグの発生につながり、スケジュール進捗や品質に影響を及ぼしかねない。スピードを落とさずに、いかに品質を維持するかを考えることが重要である。加えて、品質の面では、開発環境の構築やテスト時に、各メンバーがそれぞれの手順で実施することにより発生しうる差異について、考えなければならない。  
+*コミュニケーション*、*競合の防止*、*差異の防止*  
+この三つをチーム開発の解決すべき課題として、考えていきたい。
