--- a/チーム開発.md
+++ b/チーム開発.md
@@ -25,4 +25,25 @@
 チーム内のメンバーが増えれば増えるほど、可能なことが増える反面コミュニケーションが相対的に難しくなっていく。課題の共有、進捗、スケジュールの管理など、コミュニケーションを円滑にかつ、いかにコストをかけず進めるかがまず大きな課題である。  
 また、複数人で作業をする様になったことで、ソースコード、ドキュメントの競合が発生する様になる。場合によっては、大きな手戻りや、バグの発生につながり、スケジュール進捗や品質に影響を及ぼしかねない。スピードを落とさずに、いかに品質を維持するかを考えることが重要である。加えて、品質の面では、開発環境の構築やテスト時に、各メンバーがそれぞれの手順で実施することにより発生しうる差異について、考えなければならない。  
 **コミュニケーション**、**競合**、**差異**  
-この三つをチーム開発の解決すべき課題として、考えていきたい。
+この三つをチーム開発の解決すべき重要な課題として、次項以降、解決するためのツール、メソッドを記述していく。
+
+# チーム開発の為のツール、メソッド
+
+## 理想的なプロジェクトのイメージ
+
+ツール、メソッドを考える前に、今回、目標のイメージとして、以下の様な理想的プロジェクトを想定する。
+
+* **チケット管理システムに課題が集約されている。**  
+課題やタスクが一か所に集約し、優先度、重要度、ステータスがすぐにわかる状態になっている。
+各環境のデプロイ状況、テスト結果も自動で抽出し、プロジェクトに関わる全員が効率的に情報共有することが可能。
+
+* **バージョン管理システムが適切に利用されている。**  
+ソースコードが適切に管理されているだけでなく、設計書等ドキュメントや設定ファイルなどのあらゆるファイルも整理されている。ブランチ、タグが適切に利用されていることで、バグ対応版、最新リリース版等がすばやく検索でき、設定ファイルを読み込むことで、環境毎にいつでも過去のリリースに戻すことが可能である。また、オフライン時にもローカル環境内でバージョン管理することができ、スピードが維持されている。
+
+* **繰り返し再検証可能なシステムが用意されている。**  
+CI(continuous integration : 継続的インテグレーション)システムが用意されており、常にすべてのリソースを統合的に管理している。
+自動的にビルド、単体テストを実行し、チェックをすることで、コミット漏れや修正ミスにすぐに気付くことが可能で、ソフトウェアの品質向上に貢献している。
+
+* **開発、テスト、リリース時、環境の差異が適切に管理されている。**  
+環境によって異なる差異を管理し、設定ファイルやスクリプトに保存している。
+バージョン管理システム、CIシステムとリンクすることで、開発、テスト環境、リリース前の検証環境など、自由にかつ、簡単に用意することができる。
