バージョン管理ツール

--- a/チーム開発.md
+++ b/チーム開発.md
@@ -47,3 +47,31 @@ CI(continuous integration : 継続的インテグレーション)システムが
 * **開発、テスト、リリース時、環境の差異が適切に管理されている。**  
 環境によって異なる差異を管理し、設定ファイルやスクリプトに保存している。
 バージョン管理システム、CIシステムとリンクすることで、開発、テスト環境、リリース前の検証環境など、自由にかつ、簡単に用意することができる。
+
+## バージョン管理ツール
+
+### バージョン管理システムとは  
+プロジェクト内のソースコード、設計書、設定ファイル、または動画ファイルなどのコンテンツを種類を問わずに管理できる。その際、いつ、だれが、どのように変更したのかという履歴を漏らさず記録してくれることがバージョン管理システムのもっとも基本で重要な機能である。  
+現在、チーム開発を行う場合には、なにかしらのバージョン開発システムを利用することが当たり前のこととなっており、チームの開発スタイルを決定づける最も重要な要因である。
+
+### バージョン管理を使うメリット
+* 変更内容の履歴が残る。
+* 変更内容の差分を簡単に確認できる。
+* 他メンバーの変更を意図せずに上書きすることを防止する仕組みがある。
+* 任意の時点まで巻き戻すことができる。
+* 複数の派生(ブランチ)をつくることができ、ある時点の状態を保存することができる(タグ)。
+
+### バージョン管理システムの種類
+2016年現在、利用されている可能性のあるシステム、筆者が関わったことのあるバージョン管理システムについて、
+特徴を踏まえて、いくつか以下に列挙する。  
+
+*ロックモデル*  
+* VSS(VisualSourceSafe)  
+中央リポジトリに
+
+*マージモデル*
+* CVS(Concurrent Version System)
+* SVN(Subversion)
+
+*分散バージョン管理システム*
+* Git
