実験的コミット

--- a/チーム開発.md
+++ b/チーム開発.md
@@ -48,13 +48,13 @@ CI(continuous integration : 継続的インテグレーション)システムが
 環境によって異なる差異を管理し、設定ファイルやスクリプトに保存している。
 バージョン管理システム、CIシステムとリンクすることで、開発、テスト環境、リリース前の検証環境など、自由にかつ、簡単に用意することができる。
 
-## バージョン管理ツール
+## バージョン管理システム
 
 ### バージョン管理システムとは  
 プロジェクト内のソースコード、設計書、設定ファイル、または動画ファイルなどのコンテンツを種類を問わずに管理できる。その際、いつ、だれが、どのように変更したのかという履歴を漏らさず記録してくれることがバージョン管理システムのもっとも基本で重要な機能である。  
 現在、チーム開発を行う場合には、なにかしらのバージョン開発システムを利用することが当たり前のこととなっており、チームの開発スタイルを決定づける最も重要な要因である。
 
-### バージョン管理を使うメリット
+### バージョン管理を行うメリット
 * 変更内容の履歴が残る。
 * 変更内容の差分を簡単に確認できる。
 * 他メンバーの変更を意図せずに上書きすることを防止する仕組みがある。
@@ -67,11 +67,25 @@ CI(continuous integration : 継続的インテグレーション)システムが
 
 *ロックモデル*  
 * VSS(VisualSourceSafe)  
-中央リポジトリに
+ファイルをチェックアウトする前に、作業者一人以外、ファイルをロックする。メインの作業者が編集後、コミットしてロックが解放されるまで、他の作業者はチェックアウトを行うことができず、基本的に競合(コンフリクト)は起こりえない。半面、複数の作業者が同時に一つのファイルを改修することは出来ない為、効率面で他のシステムよりも劣る。
+中央リポジトリ形式をとっており、仮にリポジトリサーバーがダウンしていた場合、バージョン管理の各種機能を行うことができない。
+
+※ 筆者の経験では、その特徴であるロック形式が大きくネックに感じられました。重要でかつ、頻繁に調整がはいる新規案件のメインモジュールなどでよく順番待ちが発生し、無理やりに個人コピーを用意し、マージしようとしたことを複数人が繰り返したことでモジュールが破壊寸前になるということもありました。
 
 *マージモデル*
 * CVS(Concurrent Version System)
+複数の作業者が同時に対象ファイルをチェックアウト、編集ができる。ロックを取得しない為、コミット時に競合が発生しうるが、差分を明確に判断、吸収する機能がある為、ファイルを壊してしまう可能性は低い。競合箇所がない場合は、自動で内容のマージをしてくれる。ロック解除待ちがない為に効率よい開発ができる。VSSと同様、中央リポジトリ形式をとっている為、サーバダウン時には、パージョン管理が行えない。  
+
 * SVN(Subversion)
+CVSの後継。CVSと同様、中央リポジトリ形式をとっている。基本的には継承しているが、CVSがファイルを管理単位に考えていたのに対して、SVNでは、コミットに関連するファイルセットを管理単位にしていることで、ファイル名やディレクトクトリ名が変更削除されても追跡が可能になるなど、より柔軟な管理ができるようになっている。バージョン管理ツールとしては、現在最も普及していると考えられる。
+
+※筆者は最初の案件でCVSを経験し、次の案件で一度VSSを、以降はCSVとSVNを繰り返し経験してきました。堅牢性の面ではVSSは確かに一定の利点はあると感じましたが、効率性を考えるとやはりCVS、SVNが使いやすく、多くの案件で採用されていた理由だと思います。
 
 *分散バージョン管理システム*
 * Git
+理論上、中央リポジトリを持たない完全なｐ２ｐモデルで運用可能。
+メインリポジトリからローカルにクローンをコピーすることで、ネットワークを介さずにすべての操作が実行できる。ネットワークを介さないことで、障害でメインリポジトリがダウンしている場合やオフラインでも、ローカルのリポジトリを使ってバージョン管理を行うことができる為、マージモデルに比べても
+
+
+
+※筆者は最初の案件では、CVSを経験し、次の案件でVSSを、以降はCSVとSVNを繰り返し経験してきました。
